Fixed overflow on movie description.

--- a/src/pages/Details/Banner/banner.scss
+++ b/src/pages/Details/Banner/banner.scss
@@ -87,10 +87,12 @@
                 flex-flow: row wrap;
             }
             .overview {
-                margin-bottom: 25px;
+                margin-bottom: 10px;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
+                height: 140px;
+                // overflow-y: auto;
                 .heading {
                     font-size: 24px;
                     margin-bottom: 10px;
@@ -98,6 +100,9 @@
                 .description {
                     line-height: 24px;
                     text-align: left;
+                    height: 100px;
+                    overflow-y: scroll;
+                    // border: 1px solid red;
                 }
             }
             .circle-rating {
